fix(banner): prevent content from overlapping close button

--- a/packages/components/src/components/post-banner/post-banner.scss
+++ b/packages/components/src/components/post-banner/post-banner.scss
@@ -68,6 +68,10 @@ tokens.$default-map: components.$post-banner;
   margin-block: 0 !important;
 }
 
+::slotted(:not(post-closebutton):not([slot="heading"])) {
+padding-right: tokens.get('close-size', components.$post-close);
+}
+
 ::slotted(post-closebutton) {
   position: absolute;
   inset-block-start: tokens.get('banner-padding');
